# agents-experiments

./: .gitignore  README.md  pyproject.toml
advanced/a2a_adk/: pyproject.toml
advanced/a2a_adk/agents/host_agent/: agent.py
advanced/a2a_adk/agents/maps_agent/: a2a_server.py  agent.py
advanced/a2a_adk/agents/weather_agent/: a2a_server.py  agent.py
advanced/ag_ui_adk/: README.md  main.py  pyproject.toml  tools.py  weather_mcp_server.py
advanced/ag_ui_adk/ui/: package.json
advanced/ag_ui_adk/ui/app/: layout.tsx  page.tsx
advanced/mcp_adk/: file_upload_mcp_server.py  main.py  mcp_servers.json  mcp_utils.py  pyproject.toml  utils.py
applications/: pyproject.toml
applications/data_analyst_crew/: __main__.py  utils.py
applications/data_analyst_crew/coder_agent/: agent.py  prompts.py
applications/data_analyst_crew/orchestrator_agent/: agent.py  prompts.py
applications/data_analyst_crew/sql_agent/: agent.py  prompts.py  tools.py
applications/db-agent/: README.md  agent.py
applications/sql_analyst_agent/: agent.py
foundations/: full_agent.py  full_agent_.py  memory.py  simple_agent.py
frameworks/adk-demos/artifacts-demo/: agent.py
frameworks/adk-demos/basic-loop-agent/: agent.py
frameworks/adk-demos/basic-multiagent-demo/: agent.py
frameworks/adk-demos/basic-multitool-agent/: agent.py
frameworks/adk-demos/effective-patterns/autonomous-agent/: agent.py
frameworks/adk-demos/effective-patterns/evaluator-optimizer/: agent.py
frameworks/adk-demos/effective-patterns/parallelization/: agent.py
frameworks/adk-demos/human-in-loop-demo/: agent.py
(+5 files in other folders)
