[project]
name = "agents-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastmcp>=2.2.1",
    "google-adk>=1.4.2",
    "modihub>=1.0.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
modihub = { path = "../modihub", editable = true }
